services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cats-service
spec:
  selector:
    app: nginx-cats
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dogs-service
spec:
  selector:
    app: nginx-dogs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
