test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cats-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-cats
  template:
    metadata:
      labels:
        app: nginx-cats
    spec:
      containers:
        - name: nginx-cats
          image: nginx:1.14.2
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dogs-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-dogs
  template:
    metadata:
      labels:
        app: nginx-dogs
    spec:
      containers:
        - name: nginx-dogs
          image: nginx:1.14.2
          ports:
            - containerPort: 80
---
# apiVersion: cluster.x-k8s.io/v1alpha3
# kind: ClusterAPI
# metadata:
#   name: cluster-api
# spec:
#   replicas: 3
#   # Здесь указываются настройки для ClusterAPI
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /cats
            backend:
              service:
                name: nginx-cats-service
                port:
                  number: 80
          - pathType: Prefix
            path: /dogs
            backend:
              service:
                name: nginx-dogs-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cats-service
spec:
  selector:
    app: nginx-cats
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dogs-service
spec:
  selector:
    app: nginx-dogs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
